--- a/electron-gui/package.json
+++ b/electron-gui/package.json
@@ -1,24 +1,21 @@
 {
 	"name": "jeff",
-	"description": "Extracts Json meta-data and images from a SWF Flash file.",
-	"version": "0.4.0",
+	"description": "Electron GUI for JEFF",
+	"version": "0.1.0",
 	"private": false,
 	"author": {
-		"name": "Brice Chevalier"
+		"name": "Brice Chevalier",
+		"email": "bchevalier@wizcorp.jp"
 	},
-	"main": "src/index.js",
+	"main": "main.js",
 	"scripts": {
 		"start": "electron ."
 	},
 	"dependencies": {
-		"async": "0.2.10",
-		"buffer-crc32": "0.2.5",
-		"fs-extra": "0.8.1",
-		"glob": "4.3.1",
-		"js-beautify": "1.4.2"
+		"jeff": "0.4.0"
 	},
 	"devDependencies": {
-		"jshint": "2.9.5"
+		"electron": "^1.4.1"
 	},
 	"repository": {
 		"type": "git",
